@@ -1,0 +1,213 @@
+<html>
+<head>
+<title>FE comparison</title>
+<style>
+.good { color: green; }
+.bad { color: red; }
+.later { color: blue; }
+</style>
+</head>
+<body>
+<h2>FE comparison</h2>
+<table>
+  <tr>
+    <td><b><u>Feature</u></b></td>
+    <td><b><u>GLI-Dialog</u></b></td>
+    <td><b><u>GTKFE</u></b></td>
+    <td><b><u>WebGLI</u></b></td>
+  </tr>
+  <tr>
+    <td>Internationalization</td>
+    <td class="good">Ready</td>
+    <td class="bad">No</td>
+    <td class="bad">No, but could be</td>
+  </tr>
+  <tr>
+    <td>Simulation mode</td>
+    <td class="good">Question</td>
+    <td class="good">Command-line option</td>
+    <td class="bad">FIXME NONE</td>
+  </tr>
+  <tr>
+    <td>Standard/Advanced</td>
+    <td class="good">Yes</td>
+    <td class="later">No</td>
+    <td class="later">No</td>
+  </tr>
+  <tr>
+    <td>Virtual disks</td>
+    <td class="bad">local_install question</td>
+    <td class="later">No, but not needed</td>
+    <td class="bad">Kinda</td>
+  </tr>
+  <tr>
+    <td>Shows currently loaded kernel modules</td>
+    <td class="good">Yes</td>
+    <td class="good">Yes</td>
+    <td class="bad">FIXME NONE</td>
+  </tr>
+  <tr>
+    <td>Debug (verbose) mode</td>
+    <td class="bad">FIXME NONE</td>
+    <td class="good">Yes</td>
+    <td class="bad">FIXME NONE</td>
+  </tr>
+  <tr>
+    <td>Wizard vs. Menu</td>
+    <td class="good">Yes</td>
+    <td class="later">No, on purpose (for noobs)</td>
+    <td class="good">Yes</td>
+  </tr>
+  <tr>
+    <td>Skip CC networking if connection alive</td>
+    <td class="good">Yes</td>
+    <td class="good">Yes</td>
+    <td class="bad">FIXME turn back on</td>
+  </tr>
+  <tr>
+    <td>CC proxies</td>
+    <td class="bad">FIXME NONE</td>
+    <td class="good">Yes</td>
+    <td class="bad">FIXME NONE</td>
+  </tr>
+  <tr>
+    <td>CC DHCP options</td>
+    <td class="good">Yes/Advanced</td>
+    <td class="bad">FIXME NONE</td>
+    <td class="bad">FIXME NONE</td>
+  </tr>
+  <tr>
+    <td>Partitioning dump info</td>
+    <td class="later">No, but not needed</td>
+    <td class="good">Yes</td>
+    <td class="later">No, but not needed</td>
+  </tr>
+  <tr>
+    <td>Network mounts</td>
+    <td class="bad">UNTESTED</td>
+    <td class="bad">Not tested in a while</td>
+    <td class="bad">UNTESTED</td>
+  </tr>
+  <tr>
+    <td>Portage snapshot defaults to CD</td>
+    <td class="good">Yes</td>
+    <td class="good">Yes</td>
+    <td class="good">FIXME NONE</td>
+  </tr>
+  <tr>
+    <td>make.conf edit CFLAGS if dynamic</td>
+    <td class="good">No</td>
+    <td class="good">Yes, doesn't hurt anything</td>
+    <td class="bad">FIXME can edit everything BAD</td>
+  </tr>
+  <tr>
+    <td>DistCC Support</td>
+    <td class="good">Yes</td>
+    <td class="bad">FIXME checkbox only</td>
+    <td class="bad">FIXME checkbox only</td>
+  </tr>
+  <tr>
+    <td>/etc/portage/* support</td>
+    <td class="good">Yes</td>
+    <td class="bad">FIXME NONE</td>
+    <td class="bad">FIXME NONE</td>
+  </tr>
+  <tr>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td>Kernel extra sources</td>
+    <td class="good">Yes</td>
+    <td class="later">FIXME NONE</td>
+    <td class="good">Yes</td>
+  </tr>
+  <tr>
+    <td>Kernel config/non-genkernel</td>
+    <td class="good">Yes</td>
+    <td class="later">FIXME NONE</td>
+    <td class="good">Yes</td>
+  </tr>
+  <tr>
+    <td>Kernel bootsplash</td>
+    <td class="good">Yes</td>
+    <td class="later">FIXME NONE</td>
+    <td class="good">Yes</td>
+  </tr>
+  <tr>
+    <td>Bootloader optional arguments</td>
+    <td class="good">Yes</td>
+    <td class="bad">FIXME NONE</td>
+    <td class="good">Yes</td>
+  </tr>
+  <tr>
+    <td>Bootloader MBR drive selection</td>
+    <td class="good">Yes</td>
+    <td class="bad">FIXME NONE</td>
+    <td class="bad">FIXME NONE</td>
+  </tr>
+  <tr>
+    <td>Copy CC networking to IP</td>
+    <td class="good">Yes</td>
+    <td class="bad">No</td>
+    <td class="bad">No</td>
+  </tr>
+  <tr>
+    <td>Pre-configure network devices to DHCP</td>
+    <td class="bad">No</td>
+    <td class="bad">No</td>
+    <td class="bad">No</td>
+  </tr>
+  <tr>
+    <td>Wireless network support</td>
+    <td class="bad">No</td>
+    <td class="bad">No, but started</td>
+    <td class="bad">No</td>
+  </tr>
+  <tr>
+    <td>Set network gateway device</td>
+    <td class="good">Yes, required</td>
+    <td class="bad">FIXME NONE</td>
+    <td class="bad">FIXME BUGGY</td>
+  </tr>
+  <tr>
+    <td>NIS domain name</td>
+    <td class="good">Yes</td>
+    <td class="bad">FIXME NO</td>
+    <td class="good">Yes</td>
+  </tr>
+  <tr>
+    <td>Networking proxies (working in BE?)</td>
+    <td class="good">Yes</td>
+    <td class="bad">FIXME NO</td>
+    <td class="bad">FIXME NO</td>
+  </tr>
+  <tr>
+    <td>DNS Servers</td>
+    <td class="good">Yes</td>
+    <td class="bad">FIXME NO</td>
+    <td class="bad">Yes</td>
+  </tr>
+  <tr>
+    <td>Manual extra packages</td>
+    <td class="good">Yes</td>
+    <td class="good">Yes</td>
+    <td class="bad">FIXME NO, also needs Save button</td>
+  </tr>
+  <tr>
+    <td>Choose user groups from a list</td>
+    <td class="good">Yes</td>
+    <td class="bad">FIXME NO</td>
+    <td class="good">Yes</td>
+  </tr>
+  <tr>
+    <td>Functional review screen</td>
+    <td class="good">Yes</td>
+    <td class="bad">FIXME NO</td>
+    <td class="good">Yes</td>
+  </tr>
+</table>
+</body>
+</html>
