@@ -1,13 +1,15 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.504 2005/11/28 21:48:02 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.505 2005/11/29 01:38:24 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
   28 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIUtility.py:
   change ping count to 2
+  docs/comparison.html
+  initial commit
 
   27 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/templates/x86ArchitectureTemplate.py:
